vantio-grpc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: vantio-grpc-uplink
  annotations:
    networking.gke.io/load-balancer-type: "External"
spec:
  type: LoadBalancer
  ports:
  - port: 50051
    targetPort: 50051
    protocol: TCP
  selector:
    app: vantio-monolith
